deleted profile tab removed google sign in

--- a/app/src/main/res/xml/bottombar_tabs.xml
+++ b/app/src/main/res/xml/bottombar_tabs.xml
@@ -7,12 +7,12 @@
             title="Settings"
             barColorWhenSelected="@color/colorPrimary"
             badgeBackgroundColor="#FFFFFF"/>
-        <tab
-            id="@+id/tab_profile"
-            icon="@drawable/profile1"
-            title="Profile"
-            barColorWhenSelected="@color/colorPrimary"
-            badgeBackgroundColor="#FFFFFF"/>
+        <!--<tab-->
+            <!--id="@+id/tab_profile"-->
+            <!--icon="@drawable/profile1"-->
+            <!--title="Profile"-->
+            <!--barColorWhenSelected="@color/colorPrimary"-->
+            <!--badgeBackgroundColor="#FFFFFF"/>-->
         <tab
             id="@+id/tab_bot"
             icon="@drawable/starwhite"
